webkit submission text alignment fix

--- a/ligertailpy/src/frontend/css/widget_1.css
+++ b/ligertailpy/src/frontend/css/widget_1.css
@@ -211,7 +211,7 @@
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-    #ligertail_widget_small .ligertail_widget_form {padding-top: 20px}
+    #ligertail_widget_small .ligertail_widget_form {padding-top: 11px}
 }
 
 *+html #ligertail_widget_small .ligertail_widget_content {padding-top:3px}
